added findAlertPropagationPath method